--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,15 +31,17 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-      - name: Send Mail
-        if: failure()
-        uses: https://github.com/kajalmahto605/action-send-mail@v3
+      - name: Send success email
+        if: ${{ success() }}
+        uses: kajalmahto605/NodeJS-App@v3
         with:
           to: mahtokajal765@gmail.com 
           from: kajalmahato.techanek@gmail.com
-          subject: ${{github.job}} job of ${{github.repository}} has ${{job.status}}
-          body: ${{ github.job }} job in worflow ${{ github.workflow }} of ${{ github.repository }} 
-           has ${{ job.status }}
+          subject: "SUCCESS: ${{ github.job }} job of ${{ github.repository }} has succeeded"
+          body: |
+             The ${{ github.job }} job in workflow ${{ github.workflow }} of ${{ github.repository }} has succeeded.
+          Commit: ${{ github.sha }}
+          Branch: ${{ github.ref }}
           priority: high
           convert_markdown: true
         
