--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
       - name: Send success email
         if: ${{ success() }}
-        uses: kajalmahto605/NodeJS-App@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        uses: kajalmahto605/NodeJS-App@main
         with:
           to: mahtokajal765@gmail.com 
           from: kajalmahato.techanek@gmail.com
