--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
         uses: kajalmahto605/NodeJS-App@main
         with:
           entryPoint: "sendSuccessEmail.js"
-          args: "--server_address=smtp.gmail.com --server_port=465 --username=${{ secrets.EMAIL_USERNAME }} --password=${{ secrets.EMAIL_PASSWORD }} --to=mahtokajal765@gmail.com --from=kajalmahato.techanek@gmail.com --subject='SUCCESS: ${{ github.job }} job of ${{ github.repository }} has succeeded' --body='The ${{ github.job }} job in workflow ${{ github.workflow }} of ${{ github.repository }} has succeeded. Commit: ${{ github.sha }} Branch: ${{ github.ref }}' --priority=high --convert_markdown=true"
+          args: "--to=mahtokajal765@gmail.com --from=kajalmahato.techanek@gmail.com --subject='SUCCESS: ${{ github.job }} job of ${{ github.repository }} has succeeded' --body='The ${{ github.job }} job in workflow ${{ github.workflow }} of ${{ github.repository }} has succeeded. Commit: ${{ github.sha }} Branch: ${{ github.ref }}' --priority=high --convert_markdown=true"
           
         
 
