--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,10 @@ jobs:
         with:
           entryPoint: "sendSuccessEmail.js"
           args: "--to=mahtokajal765@gmail.com --from=kajalmahato.techanek@gmail.com --subject='SUCCESS: ${{ github.job }} job of ${{ github.repository }} has succeeded' --body='The ${{ github.job }} job in workflow ${{ github.workflow }} of ${{ github.repository }} has succeeded. Commit: ${{ github.sha }} Branch: ${{ github.ref }}' --priority=high --convert_markdown=true"
-          
+      - name: Send success email
+        run: docker build -t send-email .
+      - name: Run email sender
+        run: docker run send-email --to=mahtokajal765@gmail.com --from=kajalmahato.techanek@gmail.com --subject='SUCCESS...' --body='...'
         
 
           
