--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,11 +35,16 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
       - name: Send success email
         if: success()
-        uses: kajalmahto605/NodeJS-App@main
-        with:
-          entryPoint: "sendSuccessEmail.js"
-          args: "--to=mahtokajal765@gmail.com --from=kajalmahato.techanek@gmail.com --subject='SUCCESS: ${{ github.job }} job of ${{ github.repository }} has succeeded' --body='The ${{ github.job }} job in workflow ${{ github.workflow }} of ${{ github.repository }} has succeeded. Commit: ${{ github.sha }} Branch: ${{ github.ref }}' --priority=high --convert_markdown=true"
-      
+        run: |
+          node sendSuccessEmail.js \
+            --to=mahtokajal765@gmail.com \
+            --from=kajalmahato.techanek@gmail.com \
+            --subject="SUCCESS: ${{ github.job }} job of ${{ github.repository }} has succeeded" \
+            --body="The ${{ github.job }} job in workflow ${{ github.workflow }} of ${{ github.repository }} has succeeded. Commit: ${{ github.sha }} Branch: ${{ github.ref }}" \
+            --priority=high --convert_markdown=true
+
+
+
 
           
        
